[project]
name = "system"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {"name" = "Your Name", "email" = "you@email.com"},
]
dependencies = [
    "typed @ git+https://github.com/ximenesyuri/typed.git",
    "utils @ git+https://github.com/ximenesyuri/utils.git",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["system*"]
