[project]
name = "system"
version = "0.1.0"
description = "The system builder from typedsystem."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {"name" = "Yuri Ximenes", "email" = "ximenesyuri@gmx.ie"},
]
dependencies = [
    "typed @ git+https://github.com/ximenesyuri/typed"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["system*"]
